[gd_scene load_steps=5 format=3 uid="uid://cpibi7hn4bxfb"]

[ext_resource type="Script" uid="uid://by5cp1jhx5eqw" path="res://scenes/mainMenu/playerSelect.gd" id="1_vvnar"]
[ext_resource type="Script" uid="uid://cxhwv4l5j62l" path="res://scenes/mainMenu/modeSelector.gd" id="2_xjkj1"]

[sub_resource type="Gradient" id="Gradient_fu7sn"]
colors = PackedColorArray(1, 1, 1, 0.392157, 1, 1, 1, 0.392157)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_83s16"]
gradient = SubResource("Gradient_fu7sn")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 16.0
offset_right = 990.0
offset_bottom = 153.0
theme_override_font_sizes/font_size = 100
text = "Pocket Snatchers"
horizontal_alignment = 1

[node name="glossThing" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -16.0
offset_top = -7.0
offset_right = 1168.0
offset_bottom = 649.0
texture = SubResource("GradientTexture1D_83s16")

[node name="multiplayer" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = 320.0
offset_right = 616.0
offset_bottom = 360.0
script = ExtResource("1_vvnar")

[node name="playerCount" type="SpinBox" parent="multiplayer"]
layout_mode = 0
offset_left = -40.0
offset_top = -16.0
offset_right = 56.0
offset_bottom = 15.0
min_value = 2.0
max_value = 8.0
value = 2.0
custom_arrow_step = 1.0

[node name="instructions" type="Label" parent="multiplayer"]
layout_mode = 0
offset_left = -96.0
offset_top = -56.0
offset_right = 96.0
offset_bottom = -32.0
text = "Enter number of players"
horizontal_alignment = 1

[node name="playerConfirmButton" type="Button" parent="multiplayer"]
layout_mode = 0
offset_left = -40.0
offset_top = 24.0
offset_right = 40.0
offset_bottom = 56.0
text = "Confirm"

[node name="modeSelector" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_xjkj1")

[node name="multiplayer" type="Button" parent="modeSelector"]
offset_left = 488.0
offset_top = 323.0
offset_right = 664.0
offset_bottom = 371.0
text = "Multiplayer"

[node name="singleplayer" type="Button" parent="modeSelector"]
layout_mode = 0
offset_left = 488.0
offset_top = 267.0
offset_right = 664.0
offset_bottom = 315.0
text = "Singleplayer"

[connection signal="pressed" from="multiplayer/playerConfirmButton" to="multiplayer" method="playerCountConfirmed"]
[connection signal="pressed" from="modeSelector/multiplayer" to="multiplayer" method="multiplayerSelect"]
[connection signal="pressed" from="modeSelector/multiplayer" to="modeSelector" method="selectionMade"]
[connection signal="pressed" from="modeSelector/singleplayer" to="modeSelector" method="selectionMade"]
